name:                api
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/sgillis/api#readme
license:             BSD3
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , aeson
                     , base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , text >= 1.2
                     , time
                     , wai
                     , warp
